--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -20,6 +20,7 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "noImplicitAny": false,
+    "strictPropertyInitialization": false,
     "lib": [
       "ES2022",
       "dom"
